<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="FB_WriteDataToCSV" Id="{d0c36675-e81c-4e48-98b2-5d75592e8c34}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_WriteDataToCSV
VAR_INPUT
	
	bWriteCSV		: BOOL;(* Rising edge starts program execution *)
	bWriteData		: BOOL;
	sFileNamePath	: STRING(255);
	aDataHistory	: ARRAY[0..200] OF ST_EventsHistory;
	aDataHistoryArrayLength : DINT;
	sDate			: STRING(255);
	
	nMAX_CSV_ROWS	: UDINT;
	nMAX_CSV_COLUMNS: UDINT;
	

END_VAR
VAR_OUTPUT
	
	bBusy			: BOOL;
	bError			: BOOL;
	nErrId			: UDINT;
	
END_VAR
VAR
	
	
	sCSVField		: T_MaxString := '';(* Single CSV field value (column, record field) *)
	nRow	 		: UDINT 	:= 0;(* Row number (record) *)
	nColumn			: UDINT 	:= 0;(* Column number (record field) *)
	hFile			: UINT		:= 0;(* File handle of the source file *)
	step			: DWORD 	:= 0;
	fbFileOpen		: FB_FileOpen;(* Opens file *)
	fbFileClose		: FB_FileClose;(* Closes file *)
	fbFilePuts		: FB_FilePuts;(* Writes one record (line) *)
	fbWriter		: FB_CSVMemBufferWriter;(* Helper function block used to create CSV data bytes (single record line) *)
	sCSVLine		: T_MaxString := '';(* Single CSV text line (row, record), we are using string as record buffer (your are able to see created fields) *)
	database		: ARRAY[0..10000(*MAX ROWS*), 0..(*MAX COLUMS*)6] OF STRING(255(*MAX STRING LENGTH*));
	nRowIndex		: DINT;
	i				: DINT;
	sCSVDate		: STRING(255);
	bFirstScan		: BOOL;
	rWriteCSV		: R_TRIG;
	rWriteData		: R_TRIG;
	
	sFileName		: T_MaxString ;(* CSV destination file path and name *)
	
	
END_VAR
VAR_IN_OUT

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//TO USE THIS FUNCTION DEFINE "MAX ROWS", "MAX COLUMS" AND "MAX STRING LENGTH". THEY SHOULD BE EQUAL TO INPUTS

ACT_Write();
ACT_CSVSettings();


rWriteData( CLK := bWriteData);

IF NOT bFirstScan THEN
	
	sCSVDate								:= sDate;
	bFirstScan								:= TRUE;

END_IF]]></ST>
    </Implementation>
    <Action Name="ACT_CSVSettings" Id="{eaa016a4-e454-449a-b9d6-9441c13de3af}">
      <Implementation>
        <ST><![CDATA[
IF sCSVDate <> sDate THEN
	
	sCSVDate							:= sDate;

END_IF

sFileName 								:= CONCAT(sFileNamePath,CONCAT( STR1 := '_', STR2 := CONCAT( STR1:= sCSVDate, STR2 := '.csv')));


IF rWriteData.Q THEN
	
	FOR i := 0 TO aDataHistoryArrayLength DO
		
		IF aDataHistory[i].sEventTex <> '' THEN
			
					database[nRowIndex,0]				:= 	aDataHistory[i].sEventTex;
					database[nRowIndex,1]				:= 	aDataHistory[i].sType;
					database[nRowIndex,2]				:= 	aDataHistory[i].sDate;
					database[nRowIndex,3]				:= 	aDataHistory[i].sTime;
					nRowIndex							:= nRowIndex + 1;
		END_IF
					

				
	END_FOR
	
	i													:= 0;

	

END_IF





	]]></ST>
      </Implementation>
    </Action>
    <Action Name="ACT_Write" Id="{3cb6e3fa-a131-4ef4-92c3-536f8043665e}">
      <Implementation>
        <ST><![CDATA[rWriteCSV( CLK := bWriteCSV);
CASE step OF
	0:	(* Wait for rising edge at bWrite variable *)
		IF rWriteCSV.Q THEN
				
			bBusy 	:= TRUE;
			bError	:= FALSE;
			nErrId	:= 0;
			hFile	:= 0;
			nRow	:= 0;
			nColumn	:= 0;
			step 	:= 1;

		END_IF

	1:	(* Open source file *)
		fbFileOpen(  bExecute := FALSE  );
		fbFileOpen( sNetId := NetAmsId , sPathName := sFileName, nMode := FOPEN_MODEWRITE OR FOPEN_MODETEXT,(* Open file in TEXT mode! *)
					ePath := PATH_GENERIC, bExecute := TRUE );
		step := 2;

	2:(* Wait until open not busy *)
		fbFileOpen( bExecute := FALSE, bError => bError, nErrID => nErrID, hFile => hFile );
		IF NOT fbFileOpen.bBusy THEN
			IF NOT fbFileOpen.bError THEN
				step := 3;
			ELSE(* Error: file not found? *)
				step := 100;
			END_IF
		END_IF

	3:(* Convert one PLC record to CSV format *)
		sCSVLine := '';
		fbWriter.eCmd := eEnumCmd_First;(* Write first field value *)
		IF nRow <= nMAX_CSV_ROWS THEN

			FOR nColumn := 0 TO nMAX_CSV_COLUMNS BY 1 DO

				sCSVField := STRING_TO_CSVFIELD( database[ nRow, nColumn ], FALSE );(* TODO: Get field value from your application *)

				(* Add new field to the record buffer *)
				fbWriter( 	pBuffer := ADR( sCSVLine ), cbBuffer := SIZEOF( sCSVLine ) - 1, putValue := sCSVField, pValue := 0, cbValue := 0(*,
							bCRLF := ( nColumn = nMAX_CSV_COLUMNS )*) );(* bCRLF == TRUE => Write CRLF after the last field value *)
				IF fbWriter.bOk THEN
					fbWriter.eCmd := eEnumCmd_Next;(* Write next field value *)
				ELSE(* Error *)
					step := 100;
					RETURN;
				END_IF
				
			END_FOR(* FOR nColumn := 0... *)

			(* FB_FilePuts adds allready CR (carriage return) to the written line.
			We have to replace the $R$L characters with $L character to avoid double CR. *)
			IF RIGHT( sCSVLine, 2 ) = '$R$L' THEN
				sCSVLine := REPLACE( sCSVLine, '$L', 2, LEN( sCSVLine ) - 1 );
			END_IF

			nRow := nRow + 1;(* Increment number of created records (rows) *)
			step := 4;(* Write record to the file *)

		ELSE(* All rows written => Close file *)
			step := 10;
		END_IF

	4:	(* Write single text line *)
		fbFilePuts( bExecute := FALSE );
		fbFilePuts( sNetId := NetAmsId , hFile := hFile, sLine := sCSVLine, bExecute := TRUE );
		step := 5;

	5:(* Wait until write not busy *)
		fbFilePuts( bExecute := FALSE, bError => bError, nErrID => nErrID );
		IF NOT fbFilePuts.bBusy THEN
			IF NOT fbFilePuts.bError THEN
				step := 3;(* Write next record *)
			ELSE(* Error *)
				step := 100;
			END_IF
		END_IF

	10:	(* Close source file *)
		fbFileClose( bExecute := FALSE );
		fbFileClose( sNetId := NetAmsId , hFile := hFile, bExecute := TRUE );
		step := 11;

	11:(* Wait until close not busy *)
		fbFileClose( bExecute := FALSE, bError => bError, nErrID => nErrID );
		IF ( NOT fbFileClose.bBusy ) THEN
			hFile := 0;
			step := 100;
		END_IF

	100: (* Error or ready step => cleanup *)
		IF ( hFile <> 0 ) THEN
			step := 10; (* Close the source file *)
		ELSE
			bBusy := FALSE;
			step := 0;	(* Ready *)
		END_IF

END_CASE
]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="FB_WriteDataToCSV">
      <LineId Id="213" Count="1" />
      <LineId Id="155" Count="0" />
      <LineId Id="157" Count="0" />
      <LineId Id="220" Count="1" />
      <LineId Id="227" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="9" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="211" Count="1" />
      <LineId Id="210" Count="0" />
      <LineId Id="209" Count="0" />
    </LineIds>
    <LineIds Name="FB_WriteDataToCSV.ACT_CSVSettings">
      <LineId Id="213" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="214" Count="0" />
      <LineId Id="218" Count="0" />
      <LineId Id="216" Count="0" />
      <LineId Id="215" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="238" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="21" Count="0" />
      <LineId Id="233" Count="0" />
      <LineId Id="240" Count="1" />
      <LineId Id="248" Count="1" />
      <LineId Id="252" Count="2" />
      <LineId Id="251" Count="0" />
      <LineId Id="255" Count="0" />
      <LineId Id="250" Count="0" />
      <LineId Id="242" Count="0" />
      <LineId Id="246" Count="1" />
      <LineId Id="239" Count="0" />
      <LineId Id="257" Count="1" />
      <LineId Id="236" Count="1" />
      <LineId Id="235" Count="0" />
      <LineId Id="234" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="231" Count="0" />
      <LineId Id="230" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="1" Count="0" />
    </LineIds>
    <LineIds Name="FB_WriteDataToCSV.ACT_Write">
      <LineId Id="125" Count="0" />
      <LineId Id="2" Count="2" />
      <LineId Id="106" Count="0" />
      <LineId Id="6" Count="6" />
      <LineId Id="113" Count="0" />
      <LineId Id="13" Count="87" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>